--- a/.github/workflows/project-card-moved.yml
+++ b/.github/workflows/project-card-moved.yml
@@ -8,3 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: technote-space/auto-card-labeler@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONFIG_FILENAME: card-labeler.yml
