--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -1,18 +1,18 @@
-name: Auto Assign
-on:
-  issues:
-    types: [ready_for_review]
-  pull_request:
-    types: [opened]
-jobs:
-  run:
-    runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-    steps:
-      - name: "Auto-assign issue"
-        uses: pozil/auto-assign-issue@v1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          assignees: zirondi, PedroPotenza
+# name: Auto Assign
+# on:
+#   issues:
+#     types: [ready_for_review]
+#   pull_request:
+#     types: [opened]
+# jobs:
+#   run:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       issues: write
+#       pull-requests: write
+#     steps:
+#       - name: "Auto-assign issue"
+#         uses: pozil/auto-assign-issue@v1
+#         with:
+#           repo-token: ${{ secrets.GITHUB_TOKEN }}
+#           assignees: zirondi, PedroPotenza
